# neuron

./: .gitignore  LICENSE  README.md  pyproject.toml
neuron/: __init__.py  __main__.py  analyze.py  build.py  cache.py  cluster.py  detect.py  diff.py  export.py  extract.py  fitness.py  health.py  report.py  security.py  serve.py  skill.md  tui.py  watch.py
tests/: test_build.py  test_detect.py  test_diff.py  test_extract.py  test_fitness.py  test_health.py
tests/fixtures/: sample.js  sample.py
